Do not use virtual threads for native calls